# 3DBrowser

./: .gitignore  API.md  App.tsx  BatchConvertPage.tsx  LICENSE  LoaderUtils.ts  Locales.ts  README.md  SceneManager.ts  Styles.ts  ThreeViewer.tsx  index.html  index.tsx  main.cjs  main.tsx  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  vite.config.ts  vite.example.config.ts
.codebuddy/skills/3dbrowser-developer/: SKILL.md
.github/workflows/: deploy.yml  npm-publish.yml
3dbrowser-lib/: README.md  package.json
components/: ConfirmModal.tsx  MenuBar.tsx  SceneTree.tsx  SettingsPanel.tsx  ToolPanels.tsx
example/: App.tsx  README.md  index.html  package-lock.json  package.json
example/3dbrowser-lib/: 3dbrowser.js  ThreeViewer.d.ts
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: main.json
example/src-tauri/icons/: README.md
example/src-tauri/src/: main.rs
loader/: LoaderUtils.ts
src/: index.ts
src/components/: AboutModal.tsx  CommonUI.tsx  ConfirmModal.tsx  ContextMenu.tsx  ErrorBoundary.tsx  LoadingOverlay.tsx  MenuBar.tsx  PropertiesPanel.tsx  SceneTree.tsx  SettingsPanel.tsx  ThreeViewer.tsx  ToolPanels.tsx  ViewCube.tsx
src/components/MenuBar/: MenuBar.tsx  MenuItem.tsx  Toolbar.tsx
src/components/ToolPanels/: Checkbox.tsx  (+8 more)
src/loader/: IFCLoader.ts  LoaderUtils.ts  OCCTLoader.ts  lmbLoader.ts
src/styles/: index.css
src/theme/: Icons.tsx  Locales.ts  Styles.ts
src/utils/: SceneManager.ts  chunkWorker.ts  converter.ts  exportLMB.ts  octree.ts  threeDTiles.ts
utils/: Locales.ts
(+36 files in other folders)
